*Empty MediaWiki Message*

--- a/Afgan.mw
+++ b/Afgan.mw
@@ -1,5 +1,5 @@
 {{Databox}}
-'''Afgan''' ([[Assaɣ usnan]]: ''Homo sapiens'')  [[Amuddir]] amyiwen id yegran seg [[afgan amasnag|ufgan amasnag]] deg [[tawsit (tudersent)|tewsit]] n [[Humu]] (ifganen), Afgan d [[Aseklu n temhazt n tdefrin|angaz]] deg [[taɣreft (Tasartut)|teɣreft]] n [[Izunefganen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tifganyin]], Afgan d amuddir amyiwen iy lan (yesɛan) [[allaɣ]] yenneflin s waṭas, iy zemren ad [[Asekti|issekti]] w ad issexdem [[tutlayt]] w ad yaf tifrat i wuguren id yettmagar, Yerna [[tafekka|tafekka-ynes]] tbedd s ijufaṛ [[Tawremt|iwermanen]] ifellayen d iddayen issifrar awliwel-is (issisehil aḥerrk-is) s tenmeẓla d [[allaɣ|wallaɣ]] dɣa anecta d ayla yettgin deg ufgan d amuddir amyiwen iy zemren ad yessexdem tizmmarin-is [[agerru|tiggerruyin]] d [[tafekka|tfekkawin]] d usexdem n [[Afus|ufus]] akken igerrez i tmugri d isnulfu n ifecka i yesri (i yuḥwaj) deg tudert-is, Akken ila (yesɛa) taɣect d tukrist sgi iy ttmeslay.
+'''Afgan''' ([[Assaɣ ussnan]]: ''Homo sapiens'')  d [[amuddir]] amyiwen id yegran seg [[afgan amasnag|ufgan amasnag]] deg [[tawsit (tudersent)|tewsit]] n [[Humu]] (ifganen), Afgan d [[Aseklu n temhazt n tdefrin|angaz]] deg [[taɣreft (Tasartut)|teɣreft]] n [[Izunefganen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tifganyin]], Afgan d amuddir amyiwen iy lan (yesɛan) [[allaɣ]] yenneflin s waṭas, iy zemren ad [[Asekti|issekti]] w ad issexdem [[tutlayt]] w ad yaf tifrat i wuguren id yettmagar, Yerna [[tafekka|tafekka-ynes]] tbedd s ijufaṛ [[Tawremt|iwermanen]] ifellayen d iddayen issifrar awliwel-is (issisehil aḥerrk-is) s tenmeẓla d [[allaɣ|wallaɣ]] dɣa anecta d ayla yettgin deg ufgan d amuddir amyiwen iy zemren ad yessexdem tizmmarin-is [[agerru|tiggerruyin]] d [[tafekka|tfekkawin]] d usexdem n [[Afus|ufus]] akken igerrez i tmugri d isnulfu n ifecka i yesri (i yuḥwaj) deg tudert-is, Akken ila (yesɛa) taɣect d tukrist sgi iy ttmeslay.
 
 Tiɣri n [[timesɣezt|timesɣaz]] tesseken-d anza d akken afgan yella deg [[Tafriqt|Tefrikt]] send n 300.000 n iseggasen maca tura yettidir deg [[Amenẓaw|imenẓawen]] n [[tagnit|tegnit]] s wuṭṭunyugaren 7,3 n imelyaren n ifganen 
 
