*Empty MediaWiki Message*

--- a/Adeffu.mw
+++ b/Adeffu.mw
@@ -1,7 +1,5 @@
-[[Tugna:Red Apple.jpg|thumb|250px|Tadeffut]]
-
-
-'''Adeffu''' (Yettwassen s ''Tteffaḥ''), ([[isem usnan]]: ''Malus domestica'') d yiwen gar n [[talmest|telmas]] n [[imɣan]]
+{{Automatic taxobox]}
+'''Adeffu''' ('''[[Assaɣ ussnan]]''': ''Malus domestica'') d yiwen gar n [[talmest|telmas]] n [[imɣan]]
 
 == Tilɣa n yemɣi == 
 
