*Empty MediaWiki Message*

--- a/Adeffu.mw
+++ b/Adeffu.mw
@@ -1,4 +1,4 @@
-{{Automatic taxobox]}
+{{Automatic taxobox}}
 '''Adeffu''' ('''[[Assaɣ ussnan]]''': ''Malus domestica'') d yiwen gar n [[talmest|telmas]] n [[imɣan]]
 
 == Tilɣa n yemɣi == 
