*Empty MediaWiki Message*

--- a/Aɣsi.mw
+++ b/Aɣsi.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Aɣsi''' ('''[[Assaɣ ussnan]]''': ''Canis lupus'') d [[talmest|agman]] ameqran yakk deg [[tawacult (tasnudert)|twacult]] n [[taydiyyin]], [[Timesɣezt|Timesɣaz]] sskanayen-t-d d akken iɣas (''[[asget]] n weɣsi'') ddren deg [[tagnit|tegnit]] seg 300,000 n iseggasen aya, Aɣsi yezdi deg yiwen n [[Aẓaṛ imezdi|uẓar imezdi]] yakk d [[aydi|waydi]] 
+'''Aɣsi''' ('''[[Assaɣ ussnan]]''': ''Canis lupus'') d [[talmest|agman]] ameqran yakk deg [[tawacult (tasnudert)|twacult]] n [[taydiyyin]], [[Timesɣezt|Timesɣaz]] sskanayen-t-d d akken iɣas (''[[asget]] n weɣsi'') ddren deg [[tagnit|tegnit]] seg 300,000 n iseggasen aya, Aɣsi yezdi deg yiwen n [[Aẓaṛ imezdi|uẓar imezdi]] yakk d [[aydi|waydi]] ɣas akken ttwafken-d kra n yisteqsiyen ɣef tesfelsant n tegrayt-a tussnant maca azal ameqran n inzaten (ttbut) yellan ssentamen-d tiẓri ayi, Dɣa [[Asnudran|imusnawen]] ukzen-d aṭas n [[Adu-telmest|tdu-lemsin]] maca amdan-nsent n tidet d win zeddiɣen deg tezrawt
 
 == Ideggan n tudert ==
 Zik nni llan iɣas ttidiren deg tjumma tamaggagt (wssiɛen), Seg [[Urasya]] d [[Tamrikt n Ugafa|Marikan n Ugafa]] yakk d [[Asamar alemmas|usamar alemmas]], ma d tura zeddiɣ (mazal) ttidiren anagar deg kra n ideggan kan s usrag (s ssebba) n [[agmar|wegmar]] i waexdem n weglim-is yakk d ugzam n [[tagant|tẓegwa]] i tmuska (i lebni) n tuddar d temdinin ayen ara ad yeglun s umray n iɣas d ifganen sin akin tettili-d tmenɣiwt n tɣerfin yettilin deg yideggan nni, Ɣas akken llan-d yakk isefk-a ayi yessedrusen (yessenqasen) deg umdan n iɣas maca [[talmest|talmest-a]] tettwasismel d [[Talmest ur tettwaggez|talmest ur nettwaggez]] u unect n (ɛla ḥsab) n [[Tiddukla tagreɣlant i taggaẓt n tgama]]
