*Empty MediaWiki Message*

--- a/Aɣsi.mw
+++ b/Aɣsi.mw
@@ -5,6 +5,9 @@
 Zik nni llan iɣas ttidiren deg tjumma tamaggagt (wssiɛen), Seg [[Urasya]] d [[Tamrikt n Ugafa|Marikan n Ugafa]] yakk d [[Asamar alemmas|usamar alemmas]], ma d tura zeddiɣ (mazal) ttidiren anagar deg kra n ideggan kan s usrag (s ssebba) n [[agmar|wegmar]] i waexdem n weglim-is yakk d ugzam n [[tagant|tẓegwa]] i tmuska (i lebni) n tuddar d temdinin ayen ara ad yeglun s umray n iɣas d ifganen sin akin tettili-d tmenɣiwt n tɣerfin yettilin deg yideggan nni, Ɣas akken llan-d yakk isefk-a ayi yessedrusen (yessenqasen) deg umdan n iɣas maca [[talmest|talmest-a]] tettwasismel d [[Talmest ur tettwaggez|talmest ur nettwaggez]] u unect n (ɛla ḥsab) n [[Tiddukla tagreɣlant i taggaẓt n tgama]]
 
 == Tikeli ==
+S umata, iɣas ttidiren deg tegrawt yettusemman '''aclag''', Maca llant tikwal dgi id yettwaf yiwen n weɣsi yettidir iman-is aladɣa mi ara ad yili d awessar yezzarab-it [[awtem|uwtem]] amenẓad (lqayed), Igmanen n yal aclag rennun neɣ ttenqasen s wezray n wakud s unect n imezzarwen igamanen am tilin n wučči d waṭṭanen ... Atg, s umata deg yal aclag ttilin seg 2 ar 20 n iɣas ma deg ulemmas ttilin 8, Ma d aclag meqqren yakk yewweṭ ar 36 n igmanen deg [[Alaska]] aseggasn [[1967]] 
+
+=== Amyaraw ===
 
 == Amsawal ==
 
