*Empty MediaWiki Message*

--- a/Aydi.mw
+++ b/Aydi.mw
@@ -16,3 +16,4 @@ Aydi d [[aɣersiw]] amezwaru yakk iy [[agrad|ssegred]] ufgan seg [[aɣsi|yiɣas]
 
 [[Category:Taydiyyin]]
 [[Category:Aɣersiw]]
+[[Category:Timsuṭad]]
