*Empty MediaWiki Message*

--- a/Aɣsi.mw
+++ b/Aɣsi.mw
@@ -12,6 +12,12 @@ S umata, iɣas ttidiren deg tegrawt yettusemman '''aclag''', Maca llant tikwal d
 == Amsawal ==
 
 == Asismel ==
+Aɣsi d talmest yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[aydi (tawsit)|waydi]] dgi llant gar 7 ar 10 n telmas n [[taydiyyin]], Dɣa Aɣsi d yiwen n [[aɣersiw]] yettwasemman waɣsi, ma d tilmas n iden gan-t d: [[aɣsi azeggaɣ]] (''Canis rufus''), [[Aɣsi Ahendi]] (''Canis indica''), [[Aɣsi n Himalaya]] (''Canis himalayensis''), [[Aɣsi agmudan]] (''Canis lycaon'') d [[Aɣes|waɣes]] (''Canis simensis'') ɣas akken azernen ur yefri ara ɣef ma yella kra deg tdu-lmasin-a yessefk ad ttwikksent seg usismel n iɣes neɣ ad qqimen-t
+
+=== Tamhazt ===
+Tiẓra titrarin qqaren-t-d d akken aɣsi iban-d deg tazwara yakk deg [[Urasya]] deg tazwara n tallit tatrart yudsen acku iban-d seg yiwet n tezrawt (teɣṛi) tazernant n [[azeffar aɣisan|uzeffar aɣisan]] (''Nucleic acid'') d akken aẓaṛ n iɣas n [[Asya]] yettuɣal ar 800,000 iseggasen yezrin, s unemgal n yiɣas n [[Turuft|Uruppa]] d [[Tamrikt n Ugafa|Marikan n ugafa]] anda aẓaṛ-nsen yettuɣal ar 150,000 n iseggasen kan am tidak n [[Asamar alemmas|usamar alemmas]] anect-a yella-d seld n mi id ssknen-t timesɣaz deg Uruppa ttuɣalen-t i wazal n 500,000 n iseggasen arwas (amcabi) meqqren d tdu-lemsin n Asya
+
+=== Tidu-lmasin ===
 
 == Assaɣ d yiṭan ==
 
