*Empty MediaWiki Message*

--- a/Akujil.mw
+++ b/Akujil.mw
@@ -1,4 +1,7 @@
 {{Automatic taxobox}}
-'''Akujil''' ([[isem usnan]]: ''Otus scops'') d [[aylal]] yeṭṭafaren tawacult tasnudert tawacult n [[tawukt tadettant]] deg [[Tafesna|tfesna]] n [[tawukt|twukt]].
+'''Akujil''' ([[isem usnan]]: ''Otus scops'') d [[aylal]] yeṭṭafaren tawacult tasnudert tawacult n [[tawukt tadettant]] deg [[Tafesna (tasnudert)|tfesna]] n [[tiwukin|twukin]].
 
-[[Category:Imɣan]]
+
+[[Category:aɣersiw]]
+[[Category:Iylalen]]
+[[Category:Tiwukin]]
