*Empty MediaWiki Message*

--- a/Addad_amaruz.mw
+++ b/Addad_amaruz.mw
@@ -1,6 +1,6 @@
 '''Addad amaruz''' d isem (mačči d tanzeɣt, mačči d amyag) i yettbeddilen talɣa; s ubeddel umagrad neɣ n teɣri tamenzut (A>U. A> WE…) neɣ s uɣelluy-ines (“A”).
 *Addad ilelli: amaziɣ. Addad amaruz: umaziɣ. “ A>U”.
-*Addad ilelli: tamziɣt. Addad amaruz: tmaziɣt. “A> .
+*[[Addad ilelli]]: tamziɣt. Addad amaruz: tmaziɣt. “A> .
 *Addad ilelli: axxam. Addad amaruz: wexxam. “A>We”.
 *Addad ilelli: taxxamt. Addad amaruz: texxamt “A>e”.
 …
@@ -139,3 +139,6 @@ Mačči d timsirin
 Neɣ d lewṣayat
 Yezmer ahat d tuffɣa n leɛqel
 Maca, mačči d tuffɣa i webrid”
+
+== Ẓeṛ daɣen ==
+* [[Amergu]]
