*Empty MediaWiki Message*

--- a/Amergu_(tawsit).mw
+++ b/Amergu_(tawsit).mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Amergu''' ('''[[Assaɣ ussnan]]''': ''Turdus'') d [[tawsit (tudersent)|tawsit]] n [[aylal|Iylalen]] dgi llant 38 n [[talmest|telmas]] n [[agṭiṭ|yegṭaṭ]] gar-asen [[azerkeṭṭif]], Tawsit-a teṭṭafar [[tawacult (tasnudert)|tawacult]] yeṭṭafaren yiwen n yisem ([[Amergu (tawacult)|Amergu]]) 
+'''Amergu''' ('''[[Assaɣ ussnan]]''': ''Turdus'') d [[tawsit (tudersent)|tawsit]] n [[aylal|Iylalen]] dgi llant 38 n [[talmest|telmas]] n [[agṭiṭ|yegṭaṭ]] gar-asen [[azerkeṭṭif]], Tawsit-a teṭṭafar [[tawacult (tasnudert)|tawacult]] yeṭṭafaren yiwen n yisem ([[imerga|Amergu]])
 
 == Tasartut ==
 
