*Empty MediaWiki Message*

--- a/Tadlafriwin.mw
+++ b/Tadlafriwin.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Tadlafriwin''' ([[assaɣ usnan]]: ''Hymenoptera'') d yiwet gar [[tafesna|tfesna]] timeqranin n [[aburɣas|iburɣas]], Tettugzem ar sin n wangazen: [[Timsammasin]] d [[izimrez|tizimerzin]], Dges aṭas n [[tawacult (tasnudert)|twaculin]] am:
+'''Tadlafriwin''' ('''[[assaɣ ussnan]]''': ''Hymenoptera'') d yiwet gar [[tafesna (tasnudert)|tfesniwin]] timeqranin n [[aburɣas|iburɣas]], tebṭa ar sin n ifurken: [[Timsammasin]] d [[izimrez|tizimerzin]], Dges aṭas n [[tawacult (tasnudert)|twaculin]] am:
 
 * [[Tizizwin]]
 
