*Empty MediaWiki Message*

--- a/Tadlafriwin.mw
+++ b/Tadlafriwin.mw
@@ -1,10 +1,10 @@
 {{Automatic taxobox}}
-'''Tadlafriwin''' ('''[[assaɣ ussnan]]''': ''Hymenoptera'') d yiwet gar [[tafesna (tasnudert)|tfesniwin]] timeqranin n [[aburɣas|iburɣas]], tebṭa ar sin n ifurken: [[Timsammasin]] d [[izimrez|tizimerzin]], Dges aṭas n [[tawacult (tasnudert)|twaculin]] am:
+'''Tadlafriwin''' ('''[[assaɣ ussnan]]''': ''Hymenoptera'') d yiwet gar [[tafesna (tasnudert)|tfesniwin]] timeqranin n [[aburɣas|iburɣas]], tebṭa ar sin n ifurken: '''[[tinammasin]]''' d '''[[tizimerzin]]''', Dges aṭas n [[tawacult (tasnudert)|twaculin]] am:
 
-* [[Tizizwin]]
+* [[Tizizwatin]]
 
 * [[Tiweṭfin]]
 
 * [[Tiberzeggatin]]
 
-Deg [[tafesna|tfesna]] ayyi llan-t ugar n 130.000 n [[talmest|telmas]] yettidiren deg twennadṭin yemgaraden
+Deg [[tafesna (tasnudert)|tfesna]] ayyi llan-t ugar n 130.000 n [[talmest|telmas]] yettidiren deg twennadṭin yemgaraden, Amur ameqran deg-sent ttilin-t deg [[imɣan|yimɣan]] d ijeǧǧigen
