*Empty MediaWiki Message*

--- a/Tadlafriwin.mw
+++ b/Tadlafriwin.mw
@@ -8,3 +8,8 @@
 * [[Tiberzeggatin]]
 
 Deg [[tafesna (tasnudert)|tfesna]] ayyi llan-t ugar n 130.000 n [[talmest|telmas]] yettidiren deg twennadṭin yemgaraden, Amur ameqran deg-sent ttilin-t deg [[imɣan|yimɣan]] d ijeǧǧigen
+
+== Ẓeṛ daɣen ==
+
+[[Category:Iburɣas]]
+Category:Iɣersiwen]]
