*Empty MediaWiki Message*

--- a/Tadlafriwin.mw
+++ b/Tadlafriwin.mw
@@ -12,4 +12,4 @@ Deg [[tafesna (tasnudert)|tfesna]] ayyi llan-t ugar n 130.000 n [[talmest|telmas
 == Ẓeṛ daɣen ==
 
 [[Category:Iburɣas]]
-Category:Iɣersiwen]]
+[[Category:Iɣersiwen]]
