--- a/Tadlafriwin.mw
+++ b/Tadlafriwin.mw
@@ -10,6 +10,6 @@
 Deg [[tafesna (tasnudert)|tfesna]] ayyi llan-t ugar n 130.000 n [[talmest|telmas]] yettidiren deg twennadṭin yemgaraden, Amur ameqran deg-sent ttilin-t deg [[imɣan|yimɣan]] d ijeǧǧigen
 
 == Ẓeṛ daɣen ==
-
+* [[Arẓaẓ]]
 [[Category:Iburɣas]]
 [[Category:Iɣersiwen]]
