--- a/Arẓaẓ.mw
+++ b/Arẓaẓ.mw
@@ -2,6 +2,7 @@
 '''Arẓaẓ''' ('''[[Assaɣ ussnan]]''': ''Vespa'') d irem id yesskanayen yal [[aburɣas]] yeṭṭafaren [[tafesna (tasnudert)|tafesna]] n [[tadlafriwin]] d [[adu-tfesna|wadu-tfesna]] n  [[tinammasin|tnammasin]], Druɣ yal awred aberɣas ila (yesɛa) yiwet n [[talmest|telmest]] n irẓaẓen ma drus gemmren-t neɣ [[ajenṭed|tt-jenṭiden-t]] fell-as ayen yettaǧǧan irẓaẓen lan azal meqqren deg usenɣed agaman deg iwerden nni
 
 == Asismel ==
+Amur ameqran n telmas n yirẓaẓen (ugar n 100,000 n telmas) gan d [[ajenṭed|ijenṭaden]]
 
 == Igelman ==
 
