*Empty MediaWiki Message*

--- a/Tameddit.mw
+++ b/Tameddit.mw
@@ -1,6 +1,6 @@
 [[Tugna:Sunset_in_Coquitlam.jpg|thumb|250px|Tameddit deg tallit n [[adnunnes|udnunnes]]]]
 
-'''Tameddit''' d tallit gar n [[aɣelluy|uɣelluy]] d tlemmast n [[iṭ|yiṭ]], tallit n tmeddit d tin yemgaraden s wemgarad n s tallit n [[iṭ|yiṭ]], Kra n ifganen ɣilen d akken tameedit tessentay (tbeddu) ɣef tesmust (lxemsa) maca ɣer inselmen tbeddu seg tuddna n (lmeɣreb) alamma d seld n [[adnunnes|udnunnes]]
+'''Tameddit''' d tallit gar n [[aɣelluy|uɣelluy]] d tlemmast n [[iṭ|yiṭ]], tallit n tmeddit d tin yemgaraden s wemgarad n s tallit n [[iṭ|yiṭ]], Kra n ifganen ɣilen d akken tameedit tessentay (tbeddu) ɣef tesmust (lxemsa) maca ɣer inselmen tbeddu seg [[tuddna]] n ([[lmeɣreb]]) alamma d seld n [[adnunnes|udnunnes]]
 
 == Ẓeṛ daɣen ==
 * [[Tanezzayt]]
