*Empty MediaWiki Message*

--- a/Aɣersiw.mw
+++ b/Aɣersiw.mw
@@ -6,7 +6,13 @@
 | authority = [[Lineo|Linnaeus]], [[1758]]
 | display children = 3 collapse
 }}
-'''Aɣersiw''' d, ɣef leḥsab n [[useggi amagnu|useggi amagnu]], [[Udus (tasnagmant)|amuddir]] [[aẓlazzug|ameẓlazzug]], yetečč tinegwa tigemnawin. Neḥeṛṛ tura irem {{cita|aɣersiw}} i timiliyin i xnezen d [[Udus ageticenbit|ageticenbit]], ɣas ma necukk [[brutuzuwar]] am iɣersiwen ayenticenbit. Am akkw imuddiren, yal aɣersiw yesɛa ikniwen wukud yessileɣ tagrawt tamsarit, i nsemmi [[talmest]]. [[Platon]] yefka-d tabadut agi n awal deg ''[[Épinomis]]''<ref>981b</ref> : {{cita|ayen id fkan asmunu d tadukli n taṛwiḥt d tafekka ddaw yiwet talɣa}}.
+'''Aɣersiw''' (s [[Talatinit|Tlatint]]: ''Animalia'') d tagrawt tagejdant n [[amuddir|imuddiren]] [[anadmečču|inedmuččuten]] tettwasismel s umeggez-ines d [[Tagelda (tasnudert)|Tagelda tasnudrant]] timziregt s yisem n '''tgelda taɣersawt''' <br/>
+S umata, iɣersiwen ttusisemlen d akken-iten d [[udus amagtebniq|imagtebniqen]] zemren ad wliwlen (ad ḥerrken) w ad aɣen awal i yesmeksilen (ibeddilen) n twennaṭ, Akken daɣen i han d imuddiren iy tetten, ama s wučči n yimɣan neɣ n iɣersiwen n iden 
+
+Deg [[Tasartut n tesnudert|usismel ussnan]] atrar, [[Tamsartut|timsurta]] n iɣersiwen ttwasemmayen-t '''Animalia''' deg [[Assaɣ ussnan|wassaɣ ussnan]]  
+
+== Amezruy ==
+
 == Tiwelhiwin ==
 {{refs}}
 
