*Empty MediaWiki Message*

--- a/Binyamin.mw
+++ b/Binyamin.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''Binyamin mmis n Yakuf''' (s [[Tahibṛut|Tehibṛut]]: בנימין) d aw (mmi) wis 12 n [[Yakuf]], imma-s isem-is [[Raḥil]] illi-s n [[Laban]] id yurwen daɣen [[Yusef (mmis n Yakuf)|Yusef]] agmas amyiwen seg yimma-s, S wakka ad yili d azaya wis 12 n [[At srayel|wat yisrayel]], Anda yella [[Yakuf]] (tanekkit-is d ''Israyil'') 12 n warraw d iwetmen d yiwet n teqcict isem-is [[Dina]]
 
 == Atmaten-is ==
