*Empty MediaWiki Message*

--- a/Binyamin.mw
+++ b/Binyamin.mw
@@ -4,7 +4,7 @@
 == Atmaten-is ==
 Atmaten-is gan d arraw n [[Yakuf]] yettwasemman s [[At yisrayel]] 
 * [[Yusef (mmis n Yakuf)|Yusef]] yellan d agma-s seg yimma-s [[Raḥil]] illi-s n [[Laban]] igan d illi-s n wana (illi-s n xal-is) n Yakuf
-* [[Rubin]] yellan d mmi-s n Yakuf ameqran yakk, d [[Yudas (mmi-s n Yakuf)|Yudas]] d [[Lawi]] d [[Cimyun]] d [[Zabulun]] d [[Isakar]] d yiwet n teqcict isem-is [[Dina]]: imma-t-sen d [[Liya]] illi-s n [[Laban]] i han d uletma-s n [[Raḥil]] 
+* [[Rubin]] yellan d mmi-s n Yakuf ameqran yakk, d [[Yudas (mmi-s n Yakuf)|Yudas]] d [[Lawi]] d [[Cimyun]] d [[Zabulun]] d [[Isakar]] d yiwet n teqcict isem-is [[Dina]]: imma-t-sen d [[Liya]] illi-s n [[Laban]] i gan d uletma-s n [[Raḥil]] 
 * [[Dan (mmi-s n Yakuf)|Dan]] d [[Naftali]]: imma-t-sen d [[Bilha]] 
 * [[Gad (mmi-s n Yakuf|Gad]] d [[Acer (mmi-s n Yakuf)|Acer]]: imma-t-sen d [[Zilfa]]
 
