--- a/Rubin.mw
+++ b/Rubin.mw
@@ -1,5 +1,5 @@
-{{Databox}}
-'''Ṛubin''' (s [[Tutlayt taɛerit|Tehibṛut]]: ראובן) d iwi (mmi) ameqran yakk gar n 12 n warraw n [[Yakuf]] amazun, imma-s d [[Liya]] illi-s n [[Laban]], Anda Yakuf amazun ila (yesɛa) 12 n warraw d iwetmen (gar-asen [[Yusef (mmis n Yakuf)|Yusef]] amazun)  d yiwet n teqcict isem-is [[Dina]], Dɣa 12 n warraw-a ttwasemman [[At yisrayel]] 
+{{Infobox biography}}
+'''Ṛubin''' (s [[Tutlayt taɛerit|Tehibṛut]]: ראובן) d iwi (mmi) ameqran yakk gar n 12 n warraw n [[Yakuf]] amazun, imma-s d [[Liya]] illi-s n [[Laban]], Anda Yakuf amazun ila (yesɛa) 12 n warraw d iwetmen (gar-asen [[Yusef (mmis n Yakuf)|Yusef]] amazun)  d yiwet n teqcict isem-is [[Dina]], Dɣa 12 n warraw-a ttwasemman [[At yisrayel]]
 
 == Atmaten-is ==
 Atmaten-is gan d arraw n [[Yakuf]] yettwasemman s [[At yisrayel]] 
