*Empty MediaWiki Message*

--- a/Tiburaɣ.mw
+++ b/Tiburaɣ.mw
@@ -22,7 +22,7 @@
 |-
 |[[File:Fennec Fox Vulpes zerda.jpg|120px]] || ''V. zerda'' || [[Aɣecter]] || Aɣecter yettidir deg tmura n [[Aneẓruf Ameqran|Uneẓruf Ameqran]] ([[Tafriqt n Ugafa]]) am [[Lezzayer]], [[Ameṛṛuk]], [[Miẓran]], [[Libya]], [[Nnijer]], [[Mali]] d kra n imuren deg [[Tazunegzirt Taserɣint]] || [[File:Fennec area.png|120px]]
 |-
-|[[File:Kit fox tds.jpg|120px]] || ''V. macrotis'' || [[Kit fox]] || Kit foxes are an arid area-dwelling North American species. They are found in [[Oregon]], [[Colorado]], [[Nevada]], [[Utah]], [[California]], [[New Mexico]], and [[Texas]]. They also have a population in [[Mexico]]. || [[File:Kit Fox area.png|120px]]
+|[[File:Kit fox tds.jpg|120px]] || ''V. macrotis'' || [[Kit fox]] || Kit foxes are an arid area-dwelling North American species. They are found in [[Oregon]], [[Colorado]], [[Nevada]], [[Utah]], [[California]], [[New Mexico]], and [[Texas]]. They also have a population in [[Mexico]]. || [[File:Kit Fox range.png|120px]]
 |-
 | || ''V. pallida'' || [[Pale fox]] || The pale fox lives in upper middle Africa and is an arid area-dwelling species.<ref>“Vulpes pallida” {{cite web |url=http://www.canids.org/species/Vulpes_pallida.htm |title=Archived copy |accessdate=2011-10-24 |url-status=dead |archiveurl=https://web.archive.org/web/20111028200441/http://www.canids.org/species/Vulpes_pallida.htm |archivedate=2011-10-28 }}. Canid Specialist Group</ref>  || [[File:Pale Fox area.png|120px]]
 |-
