*Empty MediaWiki Message*

--- a/Aɣeṛda.mw
+++ b/Aɣeṛda.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Aɣeṛda''' ([[Assaɣ ussnan]]: ''Mus'') d [[tawsit (tudersent)|tawsit]] n [[aɣersiw|iɣersiwen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[taɣeṛdayt|tɣeṛdayt]] deg [[tafesna|tfesna]] n [[Timseɣẓaẓ|temseɣẓaẓ]], Talmest tamezdayt dges s waṭas d [[aɣeṛda n wexxam]]. <br/> 
+'''Aɣeṛda''' ('''[[Assaɣ ussnan]]''': ''Mus'') d [[tawsit (tudersent)|tawsit]] n [[aɣersiw|iɣersiwen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[taɣeṛdayt|tɣeṛdayt]] deg [[tafesna (tasnudert)|tfesna]] n [[Timseɣẓaẓ|temseɣẓaẓ]], Talmest tamezdayt dges s waṭas d [[aɣeṛda n wexxam]]. <br/> 
 Iɣeṛdayen s yakk [[talmest|tilmas-is]] ttmilen ad idiren deg yidgan yudsen (iqerben) ar ifganen 
 
 Yettidir uɣeṛds 3 n iseggasen. Maca drus kan iy ttaweṭ ar [[addar|waddar-a]] acku yetteɣlay d [[tagemra|tagemrawt]] i [[Amcic|yimcac]] d [[aydi|iṭan]] d [[abareɣ|iburaɣ]] d [[azrem|izerman]] yakk d [[tiwukin|tiwukin]]
