*Empty MediaWiki Message*

--- a/Aɣeṛda.mw
+++ b/Aɣeṛda.mw
@@ -12,3 +12,8 @@ Iɣeṛdayen d [[aɣersiw|iɣersiwen]] ilan anagraw n [[Amyaraw|umyaraw]] amegzu
 
 == Učči ==
 Iɣeṛdayen tetten imɣan (aladɣa [[imendi|imendiyen]] d [[igumma]]) ayen id tt-yettaǧǧan d yiwen gar n wayen yessettwaɣayen [[ammad|ammaden]]
+
+== Ẓeṛ daɣen ==
+
+[[Category:iɣersiwen]]
+[[Category:Timseɣẓaẓ]]
