*Empty MediaWiki Message*

--- a/Taɣeṛdayt.mw
+++ b/Taɣeṛdayt.mw
@@ -8,3 +8,7 @@
 * [[Timaklasin]] ([[Assaɣ ussnan]]: ''Cricetinae'')
 
 == [[Adu-twacult|Tidu-twaculin]] i [[angar|negren]] ==
+
+== Ẓeṛ daɣen ==
+[[Category:Iɣersiwen]]
+[[Category:Timseɣẓaẓ]]
