*Empty MediaWiki Message*

--- a/Aɣuli.mw
+++ b/Aɣuli.mw
@@ -10,3 +10,8 @@ Akken i llan-t dges telmas d [[agrad|timegrudin]] iy zemren ad idiren deg wexxam
 * [[Aɣuli aras]]
 
 == Aglam ==
+
+== Ẓeṛ daɣen ==
+
+[[Category:Iɣersiwen]]
+[[Category:Timseɣẓaẓ]]
