*Empty MediaWiki Message*

--- a/Tifunasiyin.mw
+++ b/Tifunasiyin.mw
@@ -6,9 +6,8 @@
 == [[Tasartut n tesnudert|Asismel]] ==
 
 == Ẓeṛ daɣen ==
-
 * [[Tafunast]]
-
 * [[Ilef]]
-
 * [[Amugay n waman]]
+
+[[Category:Iɣersiwen]]
