--- a/Assaɣ_ussnan.mw
+++ b/Assaɣ_ussnan.mw
@@ -4,3 +4,7 @@ Akken id yesskanay wawal-a, Assaɣ ussnan  yesskanay d akken isem yettwaska (yet
 * Assaɣ agejdan n [[tawsit (tudersent)|tewsit]]
 * Assaɣ asennaw n [[talmest|telmest]] ɣas akken tifawin n usiseɣ mgaraden-t seg waddad ar waddad n iden.
 * Assaɣ amezwar issentay (ibeddu) s isem agejdan (isem n tewsit), s usekkil asentay meqqren ma d isem n telmest s yisekkilen meẓẓiyen, akken i ttwarun s tarrayt izelgen (imalen), Amdya imcac n wexxam ṭṭafaren tawsit n [[Amcic|wemcic]] ([[Assaɣ ussnan]]: Felis) ma d talmest [[agrad|tamegrudt]] (domestica) ɣef anect-a assaɣ ussnan n wemcic ad yili (''Felis domestica'')
+
+== Ẓeṛ daɣen ==
+
+[[Category:Tasnudert]]
