--- a/Idwi.mw
+++ b/Idwi.mw
@@ -1,5 +1,5 @@
-{{Databox}}
-'''Idwi''' d [[aɣersiw]] [[Timseɣẓaẓ|amseɣẓaẓ]] id yettgin amur ameqran n [[tawacult (tasnudert)|twacult]] n [[tidwin]], idwi d [[aɣersiw]] [[Timsiffatin|asuṭad]] [[Timseɣẓaẓ|amseɣẓaẓ]] yettidiren g [[taneẓruft|tneẓruft]] n [[Tafriqt n ugafa|Tefrikt n ugafa]] d [[Asya]], inetteg acku ila (yesɛa) iṭarren ɣezzifen 
+{{Automatic taxobox}}
+'''Idwi''' d [[aɣersiw]] [[Timseɣẓaẓ|amseɣẓaẓ]] id yettgin amur ameqran n [[tawacult (tasnudert)|twacult]] n [[tidwin]], idwi d [[aɣersiw]] [[Timsiffatin|asuṭad]] [[Timseɣẓaẓ|amseɣẓaẓ]] yettidiren g [[taneẓruft|tneẓruft]] n [[Tafriqt n ugafa|Tefrikt n ugafa]] d [[Asya]], inetteg acku ila (yesɛa) iṭarren ɣezzifen
 
 == Tudert ==
 Idwi yezmer ad yidir alamma d 6 n iseggasen 
