*Empty MediaWiki Message*

--- a/Idwi.mw
+++ b/Idwi.mw
@@ -11,3 +11,8 @@ Idwi iy tett [[imɣi|imɣan]] d [[izinzer|izunzar]] d [[Aburɣas|iburɣas]] n id
 [[Tawtemt]] n idwi tettarew snat n tikkal deg [[anebdu|unebdu]] deg yal tikkelt tettarew gar n 2 ar 6 n imumden, [[tadist|tadist-is]] tettaṭaf gar n 25 ar 35 n wussan 
 
 == [[Tasartut n tesnudert|Asismel]] ==
+
+== Ẓeṛ daɣen ==
+
+[[Category:iɣersiwen]]
+[[Category:Timseɣẓaẓ]]
