*Empty MediaWiki Message*

--- a/Abareɣ.mw
+++ b/Abareɣ.mw
@@ -10,7 +10,11 @@ Abareɣ yettidir ama deg yidurar, ama deg tẓegwa, ama deg [[azaɣar|uzaɣar]].
 == Tira d temselɣa ==
 
 == Ẓer daɣen ==
-
 * [[Timseksumin]]
+* [[Abareɣ azeggaɣ]]
+* [[Aṛekka]]
 
-[[Taggayt:Aɣersiw]]
+[[Taggayt:iɣersiwen]]
+[[Category:Timseksumin]]
+[[Category:Timsuṭad]]
+[[Category:Taydiyyin]]
