*Empty MediaWiki Message*

--- a/Ablaɣ.mw
+++ b/Ablaɣ.mw
@@ -12,6 +12,6 @@ Seg [[Yebrir]] ar [[Yulyu]], Ableɣ yessentay (ibeddu) inig-is s walluy seg yile
 == Ẓeṛ daɣen ==
 * [[Aslem]]
 
-[[Category:aɣersiw]]
+[[Category:iɣersiwen]]
 [[Category:iɣersiwen iwlalen]]
 [[Category:iselman]]
