--- a/Aferrun.mw
+++ b/Aferrun.mw
@@ -14,4 +14,6 @@ Yekka-d seg uẓar (FRN).Ur d-nufi ara anamek n yisem-a akked unamek n uẓar-is
 == Tiwelhiwin ==
 {{refs}}
 
-[[Category:Aɣersiw]]
+[[Category:iɣersiwen]]
+[[Category:iɣersiwen iwlalen]]
+[[Category:iselman]]
