*Empty MediaWiki Message*

--- a/Ṭikkuk.mw
+++ b/Ṭikkuk.mw
@@ -1,5 +1,4 @@
 {{Automatic taxobox}}
+'''Ṭikkuk''' neɣ '''Adekku''' ('''[[Assaɣ ussnan]]''': ''Cuculus canorus'') d yiwen n [[agṭiṭ|wegṭiṭ]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] [[tadekkut]] anda llan wazal n 20 n [[talmest|elmas]]
 
-'''Ṭikkuk''' neɣ '''Adekku''' ([[isem usnan]]: ''Cuculus canorus'') d yiwen n [[igṭaṭ|wegṭiṭ]] yeṭṭafaren [[tawsit]] [[tadekkut]] dgi ara ad naf azal n 20 n [[telmas]].
-
-[[Category:aɣersiw]]
+[[Category:iɣersiwen]]
