--- a/Ṭikkuk.mw
+++ b/Ṭikkuk.mw
@@ -1,4 +1,11 @@
 {{Automatic taxobox}}
-'''Ṭikkuk''' neɣ '''Adekku''' ('''[[Assaɣ ussnan]]''': ''Cuculus canorus'') d yiwen n [[agṭiṭ|wegṭiṭ]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] [[tadekkut]] anda llan wazal n 20 n [[talmest|elmas]]
+'''Ṭikkuk''' neɣ '''Adekku''' ('''[[Assaɣ ussnan]]''': ''Cuculus canorus'') d yiwen n [[talmest|telmest]] n [[agṭiṭ|yegṭaṭ]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] [[Ṭikkuk (tawsit)|tadekkut]] anda llan wazal n 20 n [[talmest|telmas]], Ṭikkuk yewwi-d [[assaɣ imezdi|isem-is]] seg imesli-ynes (ṣṣut-is) 
+
+== Aglam ==
+
+== Ideggan n tudert ==
+
+== Inurar n tẓẓuni d tinigt ==
+
 
 [[Category:iɣersiwen]]
