--- a/Wirzan.mw
+++ b/Wirzan.mw
@@ -1,6 +1,6 @@
 {{Automatic taxobox}}
 
-'''Wirzan''', [[isem usnan]]: (''Mellivora capensis'') d yiwen n uɣersiw yeṭṭafaren [[tafesna]] n [[Timseksumin|temsuksumin]] yettidir deg [[Tafriqt|Tefriqt]] akk d kra n [[azgen|izegnan]] n [[Asya]].
+'''Wirzan''' ('''[[Assaɣ ussnan]]''': (''Mellivora capensis'') d yiwen n uɣersiw yeṭṭafaren [[tafesna (tasnudert)|tafesna]] n [[Timseksumin|temsuksumin]] yettidir deg [[Tafriqt|Tefriqt]] akk d kra n [[azgen|izegnan]] n [[Asya]].
 
 == Idgan n tudert ==
 Yettidir deg [[Tafriqt|Tefriqt]], [[iṛan]], [[Blucistan]], d [[tamurt|tmura]] n [[tazungzirt taɛrabt]].
