*Empty MediaWiki Message*

--- a/Wirzan.mw
+++ b/Wirzan.mw
@@ -1,6 +1,6 @@
 {{Automatic taxobox}}
 
-'''Wirzan''' ('''[[Assaɣ ussnan]]''': (''Mellivora capensis'') d yiwen n uɣersiw yeṭṭafaren [[tafesna (tasnudert)|tafesna]] n [[Timseksumin|temsuksumin]] yettidir deg [[Tafriqt|Tefriqt]] akk d kra n [[azgen|izegnan]] n [[Asya]].
+'''Wirzan''' ('''[[Assaɣ ussnan]]''': ''Mellivora capensis'') d yiwen n [[aɣersiw|uɣersiw]] [[Timseksumin|amseksum]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[isirru (tawsit)|isirru]] deg [[tawacult (tasnudert)|twacult]] n [[tidɣaɣatin|tedɣaɣatin]], yettidir deg [[Tafriqt|Tefriqt]] akk d kra n izegnan n [[Asya]] am [[Blucistan]] d usamar n [[Iṛan]] d [[Tazunegzirt Taserɣint|tzunegzirt taserɣint]]. Wirzan d aɣersiw abɣas s waṭas acku yuddes (igder) yerna ur yettagad ara iɣersiwen n iden ɣas ma meqqr-it fell-as, ira (iḥemmel) učči n [[tamment]] s waṭas ur yettagad ara tuqqsa n [[Tizizwit|tzizwa]] akken daɣen i yettaker učči n yizmawen d iknuzen n [[aɣilas|iɣilasen]]
 
 == Idgan n tudert ==
 Yettidir deg [[Tafriqt|Tefriqt]], [[iṛan]], [[Blucistan]], d [[tamurt|tmura]] n [[tazungzirt taɛrabt]].
