--- a/Wirzan.mw
+++ b/Wirzan.mw
@@ -3,7 +3,7 @@
 '''Wirzan''' ('''[[Assaɣ ussnan]]''': ''Mellivora capensis'') d yiwen n [[aɣersiw|uɣersiw]] [[Timseksumin|amseksum]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[isirru (tawsit)|isirru]] deg [[tawacult (tasnudert)|twacult]] n [[tidɣaɣatin|tedɣaɣatin]], yettidir deg [[Tafriqt|Tefriqt]] akk d kra n izegnan n [[Asya]] am [[Blucistan]] d usamar n [[Iṛan]] d [[Tazunegzirt Taserɣint|tzunegzirt taserɣint]]. Wirzan d aɣersiw abɣas s waṭas acku yuddes (igder) yerna ur yettagad ara iɣersiwen n iden ɣas ma meqqr-it fell-as, ira (iḥemmel) učči n [[tamment]] s waṭas ur yettagad ara tuqqsa n [[Tizizwit|tzizwa]] akken daɣen i yettaker učči n yizmawen d iknuzen n [[aɣilas|iɣilasen]]
 
 == Idgan n tudert ==
-Yettidir deg [[Tafriqt|Tefriqt]], [[iṛan]], [[Blucistan]], d [[tamurt|tmura]] n [[tazungzirt taɛrabt]].
+Yettidir deg [[Tafriqt|Tefriqt]], [[iṛan]], [[Blucistan]], d [[awanak|tmura]] n [[tazunegzirt taserɣintt]].
 
 == Učči ==
 Wirzan d [[aɣersiw]] [[timseksumin|amseksum]], maca [[tayri|ira]] [[tamment]] ɣef aya yettawi azgen ameqran deg [[akud|wakud-is]] [[anagi|yettunag]] neɣ yettnadi af [[taɣrest n tzizwa|tiɣersiwin n tzizwa]].
