*Empty MediaWiki Message*

--- a/Wirzan.mw
+++ b/Wirzan.mw
@@ -5,6 +5,12 @@
 == Idgan n tudert ==
 Yettidir deg [[Tafriqt|Tefriqt]], [[iṛan]], [[Blucistan]], d [[awanak|tmura]] n [[tazunegzirt taserɣintt]].
 
+== Asismel ==
+
+== Aglam ==
+
+== Wirzan deg yidles ==
+
 == Učči ==
 Wirzan d [[aɣersiw]] [[timseksumin|amseksum]], maca [[tayri|ira]] [[tamment]] ɣef aya yettawi azgen ameqran deg [[akud|wakud-is]] [[anagi|yettunag]] neɣ yettnadi af [[taɣrest n tzizwa|tiɣersiwin n tzizwa]].
 
