--- a/Ursu_amellal.mw
+++ b/Ursu_amellal.mw
@@ -5,4 +5,9 @@
 
 == Aẓaṛ n telmest-a d temhazt-is ==
 
-[[Category:Aɣersiw]]
+== Ẓeṛ daɣen ==
+
+[[Category:iɣersiwen]]
+[[Category:Timseksumin]]
+[[Category:Timsuṭad]]
+[[Category:iɣelɣalen]]
