*Empty MediaWiki Message*

--- a/Ursu_aras.mw
+++ b/Ursu_aras.mw
@@ -13,5 +13,7 @@ Ursuten arasen d [[aɣersiw|iɣersiwen]] imeqranen d icafcalen. Tifekkiwin-nsen 
 * [[Ursu Aberkan]]
 * [[Ursu n waṭlas]]
 
-[[Category:Ursuten]]
+[[Category:iɣelɣalen]]
 [[Category:iɣersiwen]]
+[[Category:Timsuṭad
+[[Category:Timseksumin]]
