--- a/Ursu_aras.mw
+++ b/Ursu_aras.mw
@@ -15,5 +15,5 @@ Ursuten arasen d [[aɣersiw|iɣersiwen]] imeqranen d icafcalen. Tifekkiwin-nsen 
 
 [[Category:iɣelɣalen]]
 [[Category:iɣersiwen]]
-[[Category:Timsuṭad
+[[Category:Timsuṭad]]
 [[Category:Timseksumin]]
