*Empty MediaWiki Message*

--- a/Ursu_n_waṭlas.mw
+++ b/Ursu_n_waṭlas.mw
@@ -10,5 +10,8 @@
 * [[Ursu Aberkan]]
 * [[Ursu]] 
 
-[[Category:Ursuten]] 
+[[Category:iɣelɣalen]]
 [[Category:iɣersiwen]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
+[[Category:iɣersiwen inegren]]
