*Empty MediaWiki Message*

--- a/Uccen.mw
+++ b/Uccen.mw
@@ -9,12 +9,9 @@ Uccen d aɣersiw amseksum, Yegguni af [[Aɣersiw|iɣerdayen]], [[AZERDI|izerdiye
 
 =Amawal=
 
-Awtem : Uccen.
+== Ẓeṛ daɣen ==
 
-Tawtemt : Tuccent.
-
-Asget amalay : Uccanen.
-
-Asget unti : Tuccanin 
-
-[[Category:Aɣersiw]]
+[[Category:iɣersiwen]]
+[[Category:Taydiyyin]]
+[[Category:Timseksumin]]
+[[Category:Timsuṭad]]
