*Empty MediaWiki Message*

--- a/Game_of_Thrones.mw
+++ b/Game_of_Thrones.mw
@@ -1,5 +1,5 @@
 {{Databox}}
-'''''Game of Thrones''''' (''Game of Thrones'') sulfent-i-d imarikaniyen aseggas n [[2011]] sɣur George RR Martin. Iḥekku-d taqsit n lfamilyat yebɣan ad ḥekmen Westeros, gar At Stark, Lannister, Baratheon. Jon Snow i ikecmen ar "taɛsast n yiḍ" (Night's watch). Akk d Daenerys Targaryen di Essos, tesɛa 3 les dragons. yellis n uselway n Westeros i-t-wanɣan. nettat tebɣa ad tuɣal tageldunt.
+'''''Game of Thrones''''' (''Game of Thrones'') sulfent-i-d imarikaniyen aseggas n [[2011]] sɣur George RR Martin. Iḥekku-d taqsit n twaculin yebɣan ad ḥekmen Westeros, gar At Stark, Lannister, Baratheon. Jon Snow i ikecmen ar "taɛsast n yiḍ" (Night's watch). Akk d Daenerys Targaryen di Essos, tesɛa 3 les dragons. yellis n uselway n Westeros i-t-wanɣan. nettat tebɣa ad tuɣal tageldunt.
 
 Taqsit agi tesɛa aṭas "les personnages", gar-asen:
 
