*Empty MediaWiki Message*

--- a/Acenyal_amaziɣ.mw
+++ b/Acenyal_amaziɣ.mw
@@ -1,6 +1,6 @@
 [[Image:Berber_flag.svg|thumb|350px|Acenyal Amaziɣ - Ratio 2:3]] 
 
-'''Acenyal Amaziɣ''' neɣ '''Asenǧaq Amaziɣ''' yettwanulfa-d deg iseggasen isamrawen (i70en) sɣur [[Agraw Imaziɣen]] (l'Académie berbère). Deg 1998, s ifassen n A'''g'''raw A'''m'''aḍlan A'''m'''aziɣ (GMM) iy gan agraw nsen amenzu deg [[Tigzirin Tiknariyin]] deg Tmurt n [[Spenyul]], asenǧaq agi yuɣal d asenǧaq unṣib n Imaziɣen akken ma ttilin ani ttidiren deg umaḍal. 
+'''Acenyal amaziɣ''' neɣ '''Asenǧaq amaziɣ''' yettwanulfa-d deg iseggasen isamrawen (i70en) sɣur [[Agraw Imaziɣen]] (l'Académie berbère). Deg 1998, s ifassen n A'''g'''raw A'''m'''aḍlan A'''m'''aziɣ (GMM) i igan agraw-nsen amenzu deg [[Tigzirin Tiknariyin]] deg Tmurt n [[Spenyul]], asenǧaq agi yuɣal d asenǧaq unṣib n Imaziɣen akken ma ttilin ani ttidiren deg umaḍal. 
 
 Ɣur-s krad (3) n yiniten (iklan / ''couleurs''):  [[aẓerwal]] (''blue''), [[azegzaw]] (''vert''), [[awraɣ]] (''jaune''). Deg tlemmas ines yettwars [[asekkil|usekkil]] s yini (aklu, ''couleur'') azeggwaɣ (« ⵣ », aza neɣ yaz) s [[Tifinaɣ]]. 
 
