*Empty MediaWiki Message*

--- a/Agemmay_amaziɣ_alatin.mw
+++ b/Agemmay_amaziɣ_alatin.mw
@@ -1,5 +1,5 @@
 {{Databox}}
-'''Agemmay Amaziɣ Alatin''' yefsa ɣef [[Agemmay alatini|ugemmay Alatini]]. I umaziɣ n ugafa (Merruk d Lezzayer d Libya), agemmay Amaziɣ Alatin isseqdac 23 isekkilen Ilaṭiniyen imɣulen d 10 isekkilen-nniḍen n ugemmay Alatin.
+'''Agemmay amaziɣ alatin''' yefsa ɣef [[Agemmay alatini|ugemmay alatini]]. I umaziɣ n ugafa (Merruk d Lezzayer d Libya), agemmay Amaziɣ Alatin isseqdac 23 isekkilen Ilaṭiniyen imɣulen d 10 isekkilen-nniḍen n ugemmay Alatin.
 
 Agemmay-agi d agmud n uzdal n agemmay Alatin i tirawt n tileqmant timaziɣint am [[Taqbaylit]] d [[Tarifit]], seg iseggwasen 1840. I ɛedda s aṭas isseɣwelen, uqbel ad yaweḍ ar lqem amiran.
 
