*Empty MediaWiki Message*

--- a/Agnin.mw
+++ b/Agnin.mw
@@ -12,3 +12,9 @@
 == Učči ==
 
 == Agmar ==
+
+== Ẓeṛ daɣen ==
+[[Category:Iɣersiwen]]
+[[Category:Iɣersiwen imegruden]]
+[[Category:Timsuṭad]]
+[[Category:Timestuga]]
