*Empty MediaWiki Message*

--- a/Yuzaṭ.mw
+++ b/Yuzaṭ.mw
@@ -5,3 +5,9 @@
 == Tilmas d ugrad ==
 
 == Učči n yuzaṭ ==
+
+== Ẓeṛ daɣen ==
+
+[[Category:iɣersiwen]]
+[[Category:Iylalen]]
+[[Category:Iɣersiwen imgruden]]
