*Empty MediaWiki Message*

--- a/Ayaziṭ_n_tẓegwa.mw
+++ b/Ayaziṭ_n_tẓegwa.mw
@@ -6,3 +6,10 @@ Ayaziṭ n tẓegwa d [[tawsit (tudersent)|tawsit]] yeṭṭafaren [[tawacult (t
 
 == Tilmas ==
 * [[Yuzaṭ]]
+
+== Ẓeṛ daɣen ==
+
+[[Category:Iɣersiwen]]
+[[Category:Timestuga]]
+[[Category:Tirammatin]]
+[[Category:Iylalen]]
