*Empty MediaWiki Message*

--- a/Ijider_awraɣ.mw
+++ b/Ijider_awraɣ.mw
@@ -14,3 +14,8 @@ Ijider awraɣ d [[tisekliwin|aselkiw]] yuddsen s waṭas, [[afraw|afraw-is]] d a
 [[Tasnaɣersiwt|Amusnaw n iɣersiwen]] n [[Swid]] [[Carl con Linné]] igelm-d iylalen-a s tugna tusnant i tikkelt tamenzut deg uskar-is ''[[anagraw agaman]]'' deg useggas n [[1758]] dgi is-yefka isem n [[tawsit (tudersent)|tewsit]] ''Falco'' anda iy ɣil de akken-it n [[aseflay|iseflayen]], send ma ad s-yales (ad s-iɛawed) umusnaw [[Fransa|afṛensis]] ([[Mathurin Jacques Brisson]]) [[tasartut n tesnudert|asismel]] w ad s-yefk isem n tewsit ''Aquila'' deg useggas n 1760
 
 == Ẓeṛ daɣen ==
+
+[[Category:Iɣersiwen]]
+[[Category:Iylalen]]
+[[Category:Tisekliwin]]
+[[Category:Timseksumin]]
