*Empty MediaWiki Message*

--- a/Igmariyen.mw
+++ b/Igmariyen.mw
@@ -5,3 +5,11 @@
 == Tamhazt ==
 
 == Tasartut d usismel ==
+
+== Ẓeṛ daɣen ==
+
+[[Category:Iɣersiwen]]
+[[Category:Tisenfednin]]
+[[Category:Timsuṭad]]
+[[Category:Timestuga]]
+[[Category:Iɣersiwen imegruden]]
