*Empty MediaWiki Message*

--- a/Titbirin.mw
+++ b/Titbirin.mw
@@ -7,3 +7,7 @@
 * [[Itbir (tawsit)|Itbir]]
 * [[Aylal]]
 * [[Aberni]]
+
+[[Category:Iɣersiwen]]
+[[Category:Iylalen]]
+[[Category:Iylalen iminigen]]
