*Empty MediaWiki Message*

--- a/Itbir_(tawsit).mw
+++ b/Itbir_(tawsit).mw
@@ -8,3 +8,8 @@
 * [[Tadrarat]] (''Columba oenas'')
 * [[Itbir n wedfel]] (''Columba leuconota'')
 * [[Itbir n tagant]] (''Columba palumbus'')
+
+== Ẓeṛ daɣen ==
+
+[[Category:iɣersiwen]]
+[[Category: Iylalen]]
