*Empty MediaWiki Message*

--- a/Ifker.mw
+++ b/Ifker.mw
@@ -4,4 +4,6 @@
 == Tiwaculin == 
 * [[Ifekren iwlalen]]
 
-[[Category:aɣersiw]]
+[[Category:aiɣersiwen]]
+[[Category:iɣersiwen iwlalen]]
+[[Category:Timestuga]]
