--- a/Tifiraqest.mw
+++ b/Tifiraqest.mw
@@ -2,3 +2,8 @@
 '''Tifiraqest''' neɣ '''Takureẓma''' ([[Assaɣ usnan]]: ''Brachyura'') d [[aɣersiw]] [[Tiruca|amruc]] [[imṛawdaren|amrawdar]], Yettidir deg yakk [[anagraw|inagrawen]] n [[tagnit|tegnit]], llan-t dges waṭas n [[talmest|telmas]] yettidiren deg [[aman|waman]] d [[Takereẓma n wakal|wakal]] aladɣa deg yidgan [[Anezwu asbegsan|isbegsanen]], llan-t wazal n 6793 n [[talmest|telmas]] yettwassenen d 1800 [[Timesɣezt|tmesɣaz]]
 
 == Acrir (awelleh) ==
+
+== Ẓeṛ daɣen ==
+
+[[Category:Iɣersiwen]]
+[[Category:Iɣersiwen iwlalen]]
