*Empty MediaWiki Message*

--- a/Amayas.mw
+++ b/Amayas.mw
@@ -5,4 +5,8 @@
 == Imadaren ==
 Imusnawen mgaraden af annect n [[amadar|imadaren]] yellan deg [[talmest]] n umayas, llan wid id yeqqaren llant 6 n imadaren, akken illan wid id yeqqaren 8
 
-[[Category: aɣersiw]]
+
+[[Category:iɣersiwen]]
+[[Category:Tiserɣuda]]
+[[Category:Timseksumin]]
+[[Category:Timsuṭad]]
