*Empty MediaWiki Message*

--- a/Anessas.mw
+++ b/Anessas.mw
@@ -10,5 +10,7 @@ Anessas d aɣersiw [[tagemra|anegmar]]
 * [[Tadɣaɣat]]
 * [[Tadɣaɣat n izawaɣen]]
 
-[[Category:Tadɣaɣat]]
-[[Category:aɣersiw]]
+[[Category:Tidɣaɣatin]]
+[[Category:iɣersiwen]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
