--- a/Tadɣaɣat_n_izawaɣen.mw
+++ b/Tadɣaɣat_n_izawaɣen.mw
@@ -2,6 +2,9 @@
 
 '''Tadɣaɣat n izawaɣen''' ([[isem usnan]]: ''Mustela eversmanii'') d yiwen n [[aɣersiw|uɣersiw]] yeṭṭafaren [[tawsit]] n [[tadɣaɣat|tedɣaɣayin]] yettekkin deg [[Tawacult|twacult]] n [[tidɣaɣatin|tedɣaɣatin]]
 
-[[Category:Tadɣaɣat]]
-[[Category:aɣersiw]]
+
+[[Category:Tidɣaɣatin]]
+[[Category:iɣersiwen]]
 [[Category:tudersent]]
+[[Category:Timseksumin]]
+[[Category:Timsuṭad]]
