*Empty MediaWiki Message*

--- a/Tadɣaɣat.mw
+++ b/Tadɣaɣat.mw
@@ -12,5 +12,7 @@
 * [[Tadɣaɣat muzagur imzerreg]] (''Mustela strigidorsa'')
 * [[Tadɣaɣat n Sibirya]] (''Mustela sibiricasibirica'')
 
-[[Category:aɣersiw]]
+[[Category:iɣersiwen]]
 [[Category:Timseksumin]]
+[[Category:Tidɣaɣatin]]
+[[Category:Timsuṭad]]
