*Empty MediaWiki Message*

--- a/Tadɣaɣat_tamezdit.mw
+++ b/Tadɣaɣat_tamezdit.mw
@@ -7,6 +7,9 @@
 ==Ẓeṛ daɣen == 
 * [[Tadɣaɣat]]
 * [[Anessas]]
-* [[Taredda]]
+* [[Tareddi]]
 
-[[Taggayt:Aɣersiw]]
+[[Taggayt:iɣersiwen]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
+[[Category:Tidɣaɣatin]]
