*Empty MediaWiki Message*

--- a/Tareddi.mw
+++ b/Tareddi.mw
@@ -17,4 +17,7 @@ Tareddi d aɣersiw yettekkin deg [[tafesna|tfesna]] n [[timseksumin|temsuksumin]
 * [[Tadɣaɣat n izawaɣen]]
 * [[Tidɣaɣatin]]
 
-[[Taggayt:Aɣersiw]]
+[[Taggayt:iɣersiwen]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
+[[Category:Tidɣaɣatin]]
