*Empty MediaWiki Message*

--- a/Izem_n_idurar.mw
+++ b/Izem_n_idurar.mw
@@ -20,3 +20,9 @@ Tafekka n izem n idurar d tusdidt (turqiqt), iga d [[tiserɣuda|aserɣud]] wis k
 
 == [[Addad n taggaẓt]] ==
 [[Tiddukla tagreɣlant i taggaẓt n tgama]] (IUCN) yessismil izem n idurar yakk d [[aɣersiw|iɣersiwen]] [[Talmest ur tettwaggez|ur tettwaggez]]
+
+== Ẓeṛ daɣen ==
+
+[[Category:Tiserɣuda]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
