*Empty MediaWiki Message*

--- a/Awdan.mw
+++ b/Awdan.mw
@@ -14,4 +14,9 @@ Iɣersiwen-a [[Amercel|ttmircalen]] deg yak [[akud]] deg useggas maca anecta yet
 
 == [[Tadfert|Tidefrin]] ==
 
-==
+== Ẓeṛ daɣen ==
+
+[[Category:iɣersiwen]]
+[[Category:Tiserɣuda]]
+[[Category:Timseksumin]]
+[[Category:Timsuṭad]]
