*Empty MediaWiki Message*

--- a/Aɣilas_n_wedfel.mw
+++ b/Aɣilas_n_wedfel.mw
@@ -18,3 +18,8 @@ Tiddi d teɣzi n uɣilas n wedfel d tin yellan s ddaw n [[tiserɣuda|tserɣuda]]
 * [[Aɣilas]]
 * [[Aɣilas aserɣin]]
 * [[Aɣilas amaziɣ]]
+
+[[Category:Iɣersiwen]]
+[[Category:Tiserɣuda]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
