*Empty MediaWiki Message*

--- a/Tawurta_n_Spanya.mw
+++ b/Tawurta_n_Spanya.mw
@@ -15,3 +15,8 @@ Tettarew [[tawtemt|tewtemt]] deg wayyur n [[Yebrir]] seld n 63 ar 68 n wussan n 
 * [[Tawurta n Urasya]]
 * [[Tawurta tazeggaɣt]]
 * [[Tawurta n Kanada]]
+
+[[Category:Iɣersiwen]]
+[[Category:Tiserɣuda]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
