--- a/Azdal_(aɣersiw).mw
+++ b/Azdal_(aɣersiw).mw
@@ -24,3 +24,8 @@ Llan-t wazal n 18 n tdefrin n wezdal:
 * [[Tiserɣuda]]
 * [[Aɣilas]]
 * [[Awdan]]
+
+[[Category:Iɣersiwen]]
+[[Category:Tiserɣuda]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
