*Empty MediaWiki Message*

--- a/Tadɣaɣat_n_wedrar.mw
+++ b/Tadɣaɣat_n_wedrar.mw
@@ -10,4 +10,7 @@ Yettidir di [[Lhend]], [[Kazaxistan]], [[Agni n Tibit]] akk d [[idurar n Himalay
 * [[Tadɣaɣat]]
 * [[Tadɣaɣat n izawaɣen]]
 
-[[Taggayt:Aɣersiw]]
+[[Category:iɣersiwen]]
+[[Category:Timseksumin]]
+[[Category:Tidɣaɣatin]]
+[[Category:Timsuṭad]]
