--- a/Tazgaga.mw
+++ b/Tazgaga.mw
@@ -7,4 +7,7 @@
 * [[Tadɣaɣat n wedrar]]
 * [[Tadɣaɣat]]
 
-[[Taggayt:Aɣersiw]]
+[[Category:iɣersiwen]]
+[[Category:Timseksumin]]
+[[Category:Tidɣaɣatin]]
+[[Category:Timsuṭad]]
