*Empty MediaWiki Message*

--- a/Imziy.mw
+++ b/Imziy.mw
@@ -13,4 +13,7 @@
 * [[Anessas]]
 * [[Tadɣaɣat n wedrar]]
 
-[[Category:aɣersiw]]
+[[Category:iɣersiwen]]
+[[Category:Timseksumin]]
+[[Category:Tidɣaɣatin]]
+[[Category:Timsuṭad]]
