*Empty MediaWiki Message*

--- a/Awerta_yegran.mw
+++ b/Awerta_yegran.mw
@@ -15,4 +15,7 @@ Llan waṭas n [[adu-telmest|idulmas]] yeṭṭafaren talmest n uwerta n yegran:
 * [[Anessas]]
 * [[Tareddi]]
 
-[[Category:Aɣersiw]]
+[[Category:iɣersiwen]]
+[[Category:Timseksumin]]
+[[Category:Tidɣaɣatin]]
+[[Category:Timsuṭad]]
