--- a/Awerta.mw
+++ b/Awerta.mw
@@ -15,4 +15,7 @@ Awerta d aɣersiw id yettilin i [[Tadɣaɣat|tedɣaɣat]] d [[aydi n waman|waydi
 == Ẓeṛ daɣen ==
 
 
-[[Category: Aɣersiw]]
+[[Category:iɣersiwen]]
+[[Category:Timseksumin]]
+[[Category:Tidɣaɣatin]]
+[[Category:Timsuṭad]]
