*Empty MediaWiki Message*

--- a/Awerta.mw
+++ b/Awerta.mw
@@ -10,7 +10,7 @@ Awerta d aɣersiw id yettilin i [[Tadɣaɣat|tedɣaɣat]] d [[aydi n waman|waydi
 
 == Amyaraw ==
 
-== Assaɣ ussnan|Assaɣen ussnanen]] ==
+== [[Assaɣ ussnan|Assaɣen ussnanen]] ==
 
 == Ẓeṛ daɣen ==
 
