*Empty MediaWiki Message*

--- a/Tadɣaɣat_muzagur_imzerreg.mw
+++ b/Tadɣaɣat_muzagur_imzerreg.mw
@@ -8,4 +8,7 @@ Yettidir deg [[aneẓẓul n usamar n Asya]].
 * [[Tadɣaɣat]]
 * [[Tazgaga]]
 
-[[Taggayt:Aɣersiw]]
+[[Category:iɣersiwen]]
+[[Category:Timseksumin]]
+[[Category:Tidɣaɣatin]]
+[[Category:Timsuṭad]]
