*Empty MediaWiki Message*

--- a/Azulil.mw
+++ b/Azulil.mw
@@ -9,3 +9,8 @@ Zik nni yella yettidir (uzilul) seg [[Mangulya]] ar [[Tazunegzirt Taɛrabt|tzune
 == Ẓeṛ daɣen ==
 * [[Aɣyul]]
 * [[Ayis]]
+
+[[Category:iɣersiwen]]
+[[Category:Igmariyen]]
+[[Category:Timsuṭad]]
+[[Category:Timestuga]]
