*Empty MediaWiki Message*

--- a/Aɣyul.mw
+++ b/Aɣyul.mw
@@ -34,4 +34,9 @@ Equus hydruntinus.JPG|Aɣyul n Turuft
 ==Taɣbalut==
 * {{Cite book|language=fr|first1=Serge|last1=Farissier|title=''L'âne''|publisher=Editions Artemis|year=2007}}
 
-[[Taggayt:Aɣersiw]]
+== Ẓeṛ daɣen ==
+
+[[Category:iɣersiwen]]
+[[Category:Igmariyen]]
+[[Category:Timsuṭad]]
+[[Category:Timestuga]]
