--- a/Ayis.mw
+++ b/Ayis.mw
@@ -1,4 +1,4 @@
-{{Databox}}
+{{Automatic taxobox}}
 '''Ayis''' neɣ '''Agmar''' d [[aɣersiw]] [[Timsiffatin|imsiff]] [[Tisuffenza|asufenza]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Igmariyen]] i wusnay (arkab) d uzuɣeṛ, Akken daɣen llan-t dges waṭas n [[Talmest|telmas]] ilan (yesɛan) iglamen (ṣṣifat) yemgaraden ama deg tazzla neɣ [[tafekka|tfekka]] neɣ deg [[azuk|wazuk]] Amdya: [[ayis aserɣin]] d [[ayis Amaziɣ|uyis Amaziɣ]]
 
 == Ayis n Tmazɣa ==
