*Empty MediaWiki Message*

--- a/Ayis.mw
+++ b/Ayis.mw
@@ -10,3 +10,8 @@
 == Tuzzya tuzzufant deg yegmaren == 
 
 == Tugniwin ==
+
+[[Category:iɣersiwen]]
+[[Category:Igmariyen]]
+[[Category:Timsuṭad]]
+[[Category:Timestuga]]
