*Empty MediaWiki Message*

--- a/Ayis_Amaziɣ.mw
+++ b/Ayis_Amaziɣ.mw
@@ -1,5 +1,5 @@
-{{Databox}}
-'''Ayis Amaziɣ''' neɣ '''Agmar Amaziɣ''' d yiwen n umadar n [[ayis|igmaren]] id yekkren deg [[Tafriqt n ugafa|Tefriqt ugafa]] ([[Tamazɣa]]) d ayen id tyeǧǧan yqqen s yisem ar [[imaziɣen]] 
+{{Automatic taxobox}}
+'''Ayis Amaziɣ''' neɣ '''Agmar Amaziɣ''' d yiwen n umadar n [[ayis|igmaren]] id yekkren deg [[Tafriqt n ugafa|Tefriqt ugafa]] ([[Tamazɣa]]) d ayen id tyeǧǧan yqqen s yisem ar [[imaziɣen]]
 
 == Aglam n yisem ==
 
