*Empty MediaWiki Message*

--- a/Ayis_Amaziɣ.mw
+++ b/Ayis_Amaziɣ.mw
@@ -15,3 +15,8 @@ Asrad n [[azagur|uzagur]]: Azagur-is isrid (iṣub weɛrur-is)
 Imeẓẓaɣ: meẓẓey-it, sriden
 
 == Tizmert-is ==
+
+[[Category:iɣersiwen]]
+[[Category:Igmariyen]]
+[[Category:Timsuṭad]]
+[[Category:Timestuga]]
