*Empty MediaWiki Message*

--- a/Izem_amaziɣ.mw
+++ b/Izem_amaziɣ.mw
@@ -2,3 +2,8 @@
 '''Izem amaziɣ''' ([[Assaɣ ussnan]]: ''Panthera leo leo'') d yiwet n [[tadfert|tedfert]] n [[izem|yizmawen]] [[angar|inegren]] deg uzɣar (lexla) deg iseggasen imezwura n [[tasut tis 20]], Izem amaziɣ yella yettidir deg [[Tafriqt n Ugafa|Tefrikt n ugafa]] llan wid id yeqqaren d akken izem amaziɣ yenger yakk deg useggas n 1940 maca kra n yizmawen llan zeddiɣ (mazal) ttidiren deg kra n [[talmat n iɣersiwen|telmatin n iɣersiwen]] d [[Asirk|isirken]] 
 
 Izem amaziɣ iga d netta yakk id tadfert tameqrant n yizmawen s [[azuk|wazuk]] n 180 ar 270 kg (ɣer [[awtem|iwetmen]]) d 100 ar 180 kg (ɣer [[Tawtemt|twetmin]]) ayen yettaǧǧan [[Ableɣ|ableɣ-is]] yudes (teqreb) ar ubleɣ n [[aksel (aɣersiw)|weksel]] igan d netta yakk i d aɣersiwameqran deg [[tawacult (tasnudert)|twacult]] n [[tiserɣuda|tserɣuda]], Maca llan kra n [[asnudran|imusnawen]] id yeqqaren d akken ableɣ-is n tidet iga annect n win n tdefrin yettidiren deg unẓul n tneẓruft
+
+[[Category:iɣersiwen]]
+[[Category:tiserɣuda]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
