*Empty MediaWiki Message*

--- a/Amcic_n_tagant.mw
+++ b/Amcic_n_tagant.mw
@@ -17,3 +17,8 @@ Talmest-a [[agrad|tettugred]]  yakk d [[Amcic|wemcic n wexxam]] ayen id yeglan s
 == Addad n taggaẓt ==
 
 == Ẓeṛ daɣen ==
+
+[[Category:iɣersiwen]]
+[[Category:Tiserɣuda]]
+[[Category:Timseksumin]]
+[[Category:Timsuṭad]]
