--- a/Amcic.mw
+++ b/Amcic.mw
@@ -13,6 +13,7 @@ Amcic d aɣersiw meẓẓiyen maca ɣas akken [[Tasartut n tesnudert|yettusismel
 Amcic ila (yesɛa) [[iccer|accaren]] i yezmer ad ten-yesnejbad neɣ ad ten-id-yessuffeɣ melmi i yebɣa, [[Tinliwin|tinli]] n [[timesliwt|tmeskiwt]] ɣer wemcic d tin yernan (iɣelben) s waṭas n tikkal.
 
 [[Category:iɣersiwen]]
+[[Category:Iɣersiwen imegruden]]
 [[Category:Tiserɣuda]]
 [[Category:Timseksumin]]
 [[Category:Timsuṭad]]
