*Empty MediaWiki Message*

--- a/Ameddurdu.mw
+++ b/Ameddurdu.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-Ameddurdu ([[Assaɣ ussnan]]: ''Gulo Gulo'') d [[aɣersiw]] [[Timseksumin|amseksum]] yettidiren deg ugafa n [[Turuft]] Akked [[Asya]] d [[Marikan]], Ameddurdu d netta yak i d [[aɣersiw]] ameqran deg [[Tawacult|twacult]] n [[tidɣaɣatin|tedɣaɣatin]], dɣa netta d aɣerdiw yuddsen (ijehden) [[tafekka]]-ynes teččur d [[aksum]], Učči ynes yezzi ɣef [[aksum|ikesman]] imi netta yettekkin deg [[tafesna|tfesna]] n [[Timseksumin|temseksumin]].
+'''Ameddurdu''' ([[Assaɣ ussnan]]: ''Gulo Gulo'') d [[aɣersiw]] [[Timseksumin|amseksum]] yettidiren deg ugafa n [[Turuft]] Akked [[Asya]] d [[Marikan]], Ameddurdu d netta yak i d [[aɣersiw]] ameqran deg [[Tawacult|twacult]] n [[tidɣaɣatin|tedɣaɣatin]], dɣa netta d aɣerdiw yuddsen (ijehden) [[tafekka]]-ynes teččur d [[aksum]], Učči ynes yezzi ɣef [[aksum|ikesman]] imi netta yettekkin deg [[tafesna|tfesna]] n [[Timseksumin|temseksumin]].
 
 == Aglam ==
 
