*Empty MediaWiki Message*

--- a/Ameddurdu.mw
+++ b/Ameddurdu.mw
@@ -7,4 +7,7 @@
 
 == Ẓeṛ daɣen ==
 
-[[Category:Aɣersiw]]
+[[Category:iɣersiwen]]
+[[Category:Tidɣaɣatin]]
+[[Category:Timseksumin]]
+[[Category:Timsuṭad]]
