*Empty MediaWiki Message*

--- a/Aserdɣyul.mw
+++ b/Aserdɣyul.mw
@@ -4,3 +4,5 @@
 
 == Aglam == 
 Aserdɣyl d aɣersiw yemgaraden ɣef [[Aserdun|userdun]] acku ufay fell-as yerna [[imesli|imesli-ynes]] (ṣṣut-is) yemgarad f win n userdun, Yerna aserdɣyul yemal deg urwas (ccebiha) ar weɣyul
+
+== Ẓeṛ daɣen ==
